# IOSXE-Upgrade-Manager

./: .gitignore  Agents.md  IOS-XE Upgrade Manager.md  README.md  config.json  insert_result.txt  main.py  pyproject.toml  requirements.txt  server.log.bak  server_log_dump.txt  supported_models.json  trigger_discovery.sh
app/: extensions.py
app/blueprints/: bulk_ops.py  copy_image.py  discovery.py  install_remove_inactive.py  jobs.py  models.py  reports.py  repository.py  settings.py  upgrade.py  verify_image.py
app/database/: models.py
app/static/css/: style.css
app/static/js/: app.js  reports.js  repository.js
app/templates/: index.html  report.html  reports_prechecks.html  repository.html  supported_models.html
app/utils/: event_bus.py  job_manager.py  netconf_client.py  precheck_engine.py  ssh_client.py
deployment/: Dockerfile  cleanup.md  docker-compose.yml  docker_deploy.md  flake.nix  install_and_run.ps1  install_wsl.sh  uninstall_and_cleanup.ps1
