[tool.poetry]
name = "iosxe-upgrade-manager"
version = "0.1.0"
description = "IOS-XE Upgrade Manager"
authors = ["Cody Harmon <codyharmon@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "3.0.0"
Flask-APScheduler = "1.13.1"
ncclient = "0.6.15"
netmiko = "4.4.0"
paramiko = "3.4.0"
xmltodict = "0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
